--- a/public/stylesheets/posts_index.css
+++ b/public/stylesheets/posts_index.css
@@ -114,7 +114,7 @@
 }
 .list_post_comment{
 	float: right;
-	width: 18%;
+	width: 23%;
 	text-align:right;
 }
 #list_post{
